--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.3",
     "mongoose-sequence": "^5.3.1",
+    "package.json": "^0.0.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "^3.1.3"
   }
 }
